<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">融投贷</string>
    <string name="hello_world">Hello world!</string>
    <string name="person_center">个人中心</string>
    <string name="notice_consult">公告资讯</string>
    <string name="want_loan">我要贷款</string>
    <string name="manager_money">理财中心</string>
    <string name="recommend_project">推荐项目</string>
    <string name="other_project">其他项目</string>
    <string name="next_begin_time">距下次开标时间</string>
    <string name="business">企业经营贷</string>
    <string name="consume">消费周转贷</string>
    <string name="timing">定时标</string>
    <string name="dingxiang">定向标</string>
    <string name="lxr">联系人: </string>
    <string name="sjh">手机号: </string>
    <string name="yx">邮箱:</string>
    <string name="hj">户籍:</string>
    <string name="xjd">现居地:</string>
    <string name="qymc">企业名称:</string>
    <string name="dbw">担保物:</string>
    <string name="dbr">担保人:</string>
    <string name="yxrzje">意向融资金额:</string>
    <string name="bzsm">备注说明:</string>
    <string name="yqrzqx">预期融资期限:</string>
    <string name="xmxx">项目信息</string>
    <string name="hkmx">还款模型</string>
    <string name="xgzl">相关资料</string>
    <string name="tbqk">投标情况</string>
    <string name="jbxx">基本信息</string>
    <string name="jklx">借款类型</string>
    <string name="xb">性别</string>
    <string name="qrtb">确认投标</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_security_center">SecurityCenterActivity</string>
    <string name="title_activity_real_name_certification">RealNameCertificationActivity</string>
    <string name="title_activity_binding_phone_number">BindingPhoneNumberActivity</string>
    <string name="title_activity_my_bank_card">MyBankCardActivity</string>
    <string name="title_activity_edit_password">EditPasswordActivity</string>
    <string name="title_activity_my_user">MyUserActivity</string>
    <string name="title_activity_pay_success">PaySuccessActivity</string>
    <string name="title_activity_speed_pay">SpeedPayActivity</string>
    <string name="title_activity_pay_detailed">PayDetailedActivity</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="title_activity_set_photo">SetPhotoActivity</string>
    <string name="title_activity_get_money_info">GetMoneyInfoActivity</string>
    <string name="title_activity_get_money">GetMoneyActivity</string>
    <string name="title_activity_my_red_envelope">MyRedEnvelopeActivity</string>
    <string name="title_activity_recent_deal">RecentDealActivity</string>
    <string name="title_activity_money_record">MoneyRecordActivity</string>
    <string name="title_activity_investment_project">InvestmentProjectActivity</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_pay_web_view">PayWebViewActivity</string>
    <string name="title_activity_get_money_webview">GetMoneyWebviewActivity</string>
    <string name="title_activity_gallery_image">GalleryImageActivity</string>

</resources>
