<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res/com.rongdai"
    android:id="@+id/other_project_item_one"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/recommend_item_loan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_20PX"
            android:layout_marginRight="10dp"
            android:text="赞皇商贸公司二期借贷"
            android:textColor="@color/loan_title"
            android:textSize="@dimen/DIMEN_32PX" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/DIMEN_20PX" >

                <TextView
                    android:id="@+id/recommend_company"
                    style="@style/listview_item_button_style"
                    android:background="@drawable/business"
                    android:text="@string/business"
                    android:textColor="@color/business" />

                <TextView
                    android:id="@+id/recommend_consume"
                    style="@style/listview_item_button_style"
                    android:background="@drawable/consume"
                    android:text="@string/consume"
                    android:textColor="@color/consume"
                    android:visibility="gone" />
            </FrameLayout>

            <TextView
                android:id="@+id/recommend_timing"
                style="@style/listview_item_button_style"
                android:layout_marginLeft="5dp"
                android:background="@drawable/timing"
                android:text="@string/timing"
                android:textColor="@color/timing" />

            <TextView
                android:id="@+id/recommend_dingxiang"
                style="@style/listview_item_button_style"
                android:layout_marginLeft="5dp"
                android:background="@drawable/dingxiang"
                android:text="@string/dingxiang"
                android:textColor="@color/dingxiang" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/recommend_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50万"
                    android:textColor="@color/biao_money"
                    android:textSize="@dimen/DIMEN_34PX" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="融资金额"
                    android:textColor="@color/loan_title"
                    android:textSize="@dimen/DIMEN_24PX" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/recommend_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5个万"
                    android:textColor="@color/biao_money"
                    android:textSize="@dimen/DIMEN_34PX" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="融资期限"
                    android:textColor="@color/loan_title"
                    android:textSize="@dimen/DIMEN_24PX" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/recommend_harvest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7%"
                    android:textColor="@color/biao_money"
                    android:textSize="@dimen/DIMEN_34PX" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="年化收益"
                    android:textColor="@color/loan_title"
                    android:textSize="@dimen/DIMEN_24PX" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center" >

        <com.rongdai.view.RoundProgressBar
            android:id="@+id/recommend_rpb"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android_custom:roundColor="#F5F5F5"
            android_custom:roundProgressColor="#FF6600"
            android_custom:roundWidth="3dip"
            android_custom:textColor="#FF6600"
            android_custom:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>